Fix z-index of container-header

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     top: 0px;
     left: 0px;
     border-bottom: 1px solid #DBDBDB;
+    z-index: 2;
 
    
 }
